container and header content added

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
 </head>
 <body>
     
+    <div class="container">
+        
+        <header class="">
+            <h1 class="header">Header</h1>
+        </header>
+
+
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
