--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
             <h1 class="header">Header</h1>
         </header>
 
+        <nav class="nav-bar">
+            <h2 class="nav-links"><a href="#" class="">HOME</a></h2>
+        </nav>
+
 
     </div>
 
