links successfuly styled! Will use to make clickable

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </header>
 
         <nav class="nav-bar">
-            <h2 class="nav-links"><a href="#" class="">HOME</a></h2>
+            <h2 class="nav-links"><a href="#" class="link">HOME</a></h2>
         </nav>
 
 
