article section content added

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </header>
 
         <nav class="nav-bar">
-            
+
             <h2 class="nav-links"><a href="#" class="link">HOME</a></h2>
             <h2 class="nav-links"><a href="#" class="link">OUR TEAM</a></h2>
             <h2 class="nav-links"><a href="#" class="link">PROJECTS</a></h2>
@@ -36,6 +36,31 @@
             </div>
             
         </nav>
+
+        <main class="">
+
+            <div class="article">
+
+                <section class="article-heading">
+                    <h2 class="article-heading-text">Article Heading</h2>
+                    <p class="heading-sub-title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, perspiciatis sequi illo, atque non quidem, reprehenderit quod expedita sed consequatur labore! Vel accusantium dicta doloribus magnam debitis modi hic ad!</p>
+
+                </section>
+
+                <section class="subsection">
+                    <h3 class="subsection-title">subsection</h3>
+                    <p class="subsection-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore quam rem quas nostrum nulla reprehenderit maiores quod eos aliquid rerum, delectus iste recusandae dicta laborum quos at saepe, cum vitae.</p>
+                    <p class="subsection-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore quam rem quas nostrum nulla reprehenderit maiores quod eos aliquid rerum, delectus iste recusandae dicta laborum quos at saepe, cum vitae.</p>
+                </section>
+                <section class="subsection">
+                    <h3 class="subsection-title">subsection</h3>
+                    <p class="subsection-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore quam rem quas nostrum nulla reprehenderit maiores quod eos aliquid rerum, delectus iste recusandae dicta laborum quos at saepe, cum vitae.</p>
+                    <p class="subsection-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore quam rem quas nostrum nulla reprehenderit maiores quod eos aliquid rerum, delectus iste recusandae dicta laborum quos at saepe, cum vitae.</p>
+                </section>
+
+            </div>
+
+        </main>
 
     </div>
 
