--- a/index.html
+++ b/index.html
@@ -60,6 +60,24 @@
 
             </div>
 
+            <aside class="sidebar">
+
+                <h2 class="sidebar-title">Related</h2>
+
+                <ul class="sidebar-list">
+                    <li class="sidebar-list-item"><a href="#" class="">Andor is such a good show</a>
+                    </li>
+                    <li class="sidebar-list-item"><a href="#" class="">Andor is such a good show</a>
+                    </li>
+                    <li class="sidebar-list-item"><a href="#" class="">Andor is such a good show</a>
+                    </li>
+                    <li class="sidebar-list-item"><a href="#" class="">Andor is such a good show</a>
+                    </li>
+                    <li class="sidebar-list-item"><a href="#" class="">Andor is such a good show</a>
+                    </li>
+                </ul>
+            </aside>
+
         </main>
 
     </div>
