footer content added

--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@
 
         </main>
 
+        <footer class="copyright">
+
+            <p class="copyright-text">(C)Copyright 2025 by helloKristinaFaye. All rights reserved.</p>
+
+        </footer>
+
     </div>
 
     <script src="script.js"></script>
